check_output.txt
    Checking sashiko v0.1.0 (/home/guro/sashiko)
error: expected `;`, found `}`
   --> src/db.rs:554:48
    |
554 |              GROUP BY day, status ORDER BY day"
    |                                                ^ help: add `;` here
555 |         } else {
    |         - unexpected token

error[E0425]: cannot find value `sql_patchsets` in this scope
   --> src/db.rs:559:40
    |
559 |         let mut rows = self.conn.query(sql_patchsets, params.clone()).await?;
    |                                        ^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `params` in this scope
   --> src/db.rs:559:55
    |
559 |         let mut rows = self.conn.query(sql_patchsets, params.clone()).await?;
    |                                                       ^^^^^^ not found in this scope

error[E0425]: cannot find value `params` in this scope
   --> src/db.rs:584:53
    |
584 |         let mut rows = self.conn.query(sql_patches, params).await?;
    |                                                     ^^^^^^ not found in this scope

error[E0308]: `if` and `else` have incompatible types
   --> src/db.rs:556:13
    |
550 | /          if let Some(sid) = subsystem_id {
551 | |/             let sql_patchsets = "SELECT strftime('%Y-%m-%d', date, 'unixepoch') as day, status, count(*) FROM patchsets p
552 | ||              JOIN patchsets_subsystems ps ON p.id = ps.patchset_id
553 | ||              WHERE ps.subsystem_id = ?
554 | ||              GROUP BY day, status ORDER BY day"
    | ||_______________________________________________- expected because of this
555 | |          } else {
556 | |              "SELECT strftime('%Y-%m-%d', date, 'unixepoch') as day, status, count(*) FROM patchsets GROUP BY day, status ORDER BY day"
    | |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `&str`
557 | |          };
    | |__________- `if` and `else` have incompatible types
    |
help: consider returning the local binding `sql_patchsets`
    |
554 ~              GROUP BY day, status ORDER BY day"
555 +             sql_patchsets
    |

error[E0282]: type annotations needed
   --> src/db.rs:559:13
    |
559 |         let mut rows = self.conn.query(sql_patchsets, params.clone()).await?;
    |             ^^^^^^^^
560 |         let mut patchsets_data = Vec::new();
561 |         while let Ok(Some(row)) = rows.next().await {
    |                                   ---- type must be known at this point
    |
help: consider giving `rows` an explicit type
    |
559 |         let mut rows: /* Type */ = self.conn.query(sql_patchsets, params.clone()).await?;
    |                     ++++++++++++

error[E0282]: type annotations needed
   --> src/db.rs:562:39
    |
562 |             let day: Option<String> = row.get(0).ok();
    |                                       ^^^ cannot infer type

error[E0282]: type annotations needed
   --> src/db.rs:584:13
    |
584 |         let mut rows = self.conn.query(sql_patches, params).await?;
    |             ^^^^^^^^
585 |         let mut patches_data = Vec::new();
586 |         while let Ok(Some(row)) = rows.next().await {
    |                                   ---- type must be known at this point
    |
help: consider giving `rows` an explicit type
    |
584 |         let mut rows: /* Type */ = self.conn.query(sql_patches, params).await?;
    |                     ++++++++++++

error[E0282]: type annotations needed
   --> src/db.rs:587:39
    |
587 |             let day: Option<String> = row.get(0).ok();
    |                                       ^^^ cannot infer type

Some errors have detailed explanations: E0282, E0308, E0425.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `sashiko` (lib) due to 9 previous errors
